--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -11,6 +11,7 @@
   --ui-body-secondary-color: #1f222b;
   --ui-body-dim-color: #282c37;
   --ui-body-simple-bg: #ffffff;
+  --site-highlight-color: transparent;
 
   /* Font Colors */
   --ui-font-color: #ffffff;
