--- a/app/views/admin/settings/branding/show.html.haml
+++ b/app/views/admin/settings/branding/show.html.haml
@@ -21,6 +21,9 @@
 
   .fields-group
     = f.input :site_short_description, wrapper: :with_block_label, as: :text, input_html: { rows: 2, maxlength: 200 }
+    
+  .fields-group
+    = f.input :site_accent_color, wrapper: :with_block_label, as: :color
 
   .fields-row
     .fields-row__column.fields-row__column-6.fields-group
