--- a/app/views/custom_css/show.css.erb
+++ b/app/views/custom_css/show.css.erb
@@ -8,3 +8,8 @@
 }
 
 <%- end %>
+
+:root {
+  --ui-highlight-color: <%= Setting.site_accent_color %>;
+  --site-highlight-color: <%= Setting.site_accent_color %>;
+}
