--- a/app/javascript/flavours/aether/styles/admin.scss
+++ b/app/javascript/flavours/aether/styles/admin.scss
@@ -145,9 +145,7 @@ $content-width: 840px;
 
       .simple-navigation-active-leaf a {
         color: var(--ui-font-color);
-        background-color: var(--ui-highlight-color);
-        border-bottom: 0;
-        border-radius: 0;
+        border: 1px solid var(--ui-font-color);
       }
     }
 
@@ -239,8 +237,8 @@ $content-width: 840px;
 
           &.selected {
             font-weight: 700;
-            color: var(--ui-highlight-color);
-            border-bottom: 2px solid var(--ui-highlight-color);
+            color: var(--ui-font-color);
+            border-bottom: 2px solid var(--ui-font-color);
           }
         }
       }
@@ -401,8 +399,35 @@ $content-width: 840px;
       }
 
       ul .simple-navigation-active-leaf a {
-        border-bottom-color: var(--ui-highlight-color);
+        border-bottom-color: var(--ui-font-color);
+        border-radius: 0;
       }
+    }
+  }
+
+  .dashboard__quick-access,
+  .warning {
+    background: transparent !important;
+    border: 1px var(--ui-font-color) solid;
+    color: var(--ui-font-color);
+  }
+
+  button,
+  .button {
+    background: white;
+    color: black;
+
+    &:hover {
+      background: white;
+    }
+  }
+
+  .table-action-link {
+    background: transparent;
+    color: white;
+
+    &:hover {
+      border-bottom: 1px solid white;
     }
   }
 }
@@ -420,7 +445,7 @@ body,
     color: var(--ui-font-dimmest-color);
 
     a {
-      color: var(--ui-highlight-color);
+      color: var(--ui-font-color);
     }
   }
 
@@ -455,7 +480,7 @@ body,
   }
 
   .warning-hint {
-    color: var(--ui-highlight-color);
+    color: var(--ui-font-color);
     font-weight: 500;
   }
 }
@@ -520,8 +545,8 @@ body,
       }
 
       &.selected {
-        color: var(--ui-highlight-color);
-        border-bottom: 2px solid var(--ui-highlight-color);
+        color: var(--ui-font-color);
+        border-bottom: 2px solid var(--ui-font-color);
       }
     }
   }
@@ -656,7 +681,7 @@ body,
   font-size: 14px;
 
   a {
-    color: var(--ui-highlight-color);
+    color: var(--ui-font-color);
     text-decoration: none;
 
     &:hover {
@@ -794,7 +819,7 @@ a.name-tag,
 
 .speech-bubble {
   margin-bottom: 20px;
-  border-inline-start: 4px solid var(--ui-highlight-color);
+  border-inline-start: 4px solid var(--ui-font-color);
 
   &.positive {
     border-left-color: $success-green;
@@ -805,7 +830,8 @@ a.name-tag,
   }
 
   &.warning {
-    border-left-color: var(--ui-highlight-color);
+    border-left-color: var(--ui-font-color);
+    background: transparent;
   }
 
   &__bubble {
@@ -965,7 +991,7 @@ a.name-tag,
     border: 0;
 
     a {
-      color: var(--ui-highlight-color);
+      color: var(--ui-font-color);
     }
 
     dl:first-child .verified {
@@ -1138,7 +1164,7 @@ a.name-tag,
 
     &__box {
       box-sizing: border-box;
-      background: var(--ui-highlight-color);
+      background: var(--ui-font-color);
       padding: 10px;
       font-weight: 500;
       color: var(--ui-font-color);
@@ -1148,7 +1174,7 @@ a.name-tag,
       @for $i from 0 through 10 {
         &--#{10 * $i} {
           background-color: rgba(
-            var(--ui-highlight-color),
+            var(--ui-font-color),
             1 * (math.div(max(1, $i), 10))
           );
         }
@@ -1218,12 +1244,12 @@ a.name-tag,
     }
 
     path:first-child {
-      fill: var(--ui-highlight-color) !important;
+      fill: var(--ui-font-color) !important;
       fill-opacity: 0.25 !important;
     }
 
     path:last-child {
-      stroke: var(--ui-highlight-color) !important;
+      stroke: var(--ui-font-color) !important;
       fill: none !important;
     }
   }
@@ -1288,13 +1314,13 @@ a.sparkline {
       width: 8px;
       height: 8px;
       border-radius: 50%;
-      background: var(--ui-highlight-color);
+      background: var(--ui-font-color);
       margin-inline-end: 10px;
 
       @for $i from 0 through 10 {
         &--#{10 * $i} {
           background-color: rgb(
-            var(--ui-highlight-color),
+            var(--ui-font-color),
             1 * (math.div(max(1, $i), 10))
           );
         }
@@ -1610,7 +1636,7 @@ a.sparkline {
       }
 
       a {
-        color: var(--ui-highlight-color);
+        color: var(--ui-font-color);
         text-decoration: none;
 
         &:hover {
@@ -1685,7 +1711,7 @@ a.sparkline {
   float: right;
 
   a {
-    color: var(--ui-highlight-color);
+    color: var(--ui-font-color);
     text-decoration: none;
 
     &:hover,
@@ -1709,7 +1735,7 @@ a.sparkline {
   min-height: 100%;
 
   a {
-    color: var(--ui-highlight-color);
+    color: var(--ui-font-color);
     text-decoration: none;
 
     &:hover {
@@ -1838,8 +1864,8 @@ a.sparkline {
       width: calc(1.375rem + 1px);
       height: calc(1.375rem + 1px);
       background: $ui-base-color;
-      border: 1px solid var(--ui-highlight-color);
-      color: var(--ui-highlight-color);
+      border: 1px solid var(--ui-font-color);
+      color: var(--ui-font-color);
       border-radius: 8px;
     }
 
@@ -1847,7 +1873,7 @@ a.sparkline {
       position: absolute;
       content: '';
       width: 1px;
-      background: var(--ui-highlight-color);
+      background: var(--ui-font-color);
       bottom: 0;
       top: calc(1.875rem + 1px);
       inset-inline-start: 0.6875rem;
