New SCSS variable to compensate for light theme

--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -10,6 +10,7 @@
   --ui-body-secondary-color: #1f222b;
   --ui-body-dim-color: #282c37;
   --ui-body-simple-bg: #ffffff;
+  --ui-font-border-color: #282c37;
 
   /* Font Colors */
   --ui-font-color: #ffffff;
