--- a/app/javascript/flavours/aether/styles/components/modal.scss
+++ b/app/javascript/flavours/aether/styles/components/modal.scss
@@ -738,15 +738,15 @@
   }
 
   .button.button-secondary {
-    border-color: var(--ui-inverted-font-color);
-    color: var(--ui-inverted-font-color);
+    border-color: var(--ui-highlight-color);
+    color: var(--ui-highlight-color);
     flex: 0 0 auto;
 
     &:hover,
     &:focus,
     &:active {
-      border-color: var(--ui-inverted-font-color);
-      color: var(--ui-inverted-font-color);
+      border-color: var(--ui-highlight-color);
+      color: var(--ui-highlight-color);
     }
   }
 
