--- a/app/javascript/flavours/aether/styles/polls.scss
+++ b/app/javascript/flavours/aether/styles/polls.scss
@@ -245,8 +245,8 @@
     padding: 6px 10px;
     height: auto;
     line-height: inherit;
-    color: $action-button-color;
-    border-color: $action-button-color;
+    color: var(--ui-highlight-color);
+    border-color: var(--ui-highlight-color);
     margin-inline-end: 5px;
   }
 
