--- a/app/javascript/flavours/aether/styles/components/modal.scss
+++ b/app/javascript/flavours/aether/styles/components/modal.scss
@@ -746,7 +746,7 @@
     &:focus,
     &:active {
       border-color: var(--ui-highlight-color);
-      color: var(--ui-highlight-color);
+      color: var(--ui-highlight-button-text-color);
     }
   }
 
