--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -56,9 +56,9 @@
       flex: 0 0 auto;
       width: 48px;
       height: 48px;
-      @include avatar-size(48px);
-
       padding-top: 2px;
+
+      @include avatar-size(48px);
 
       img {
         width: 100%;
@@ -917,6 +917,7 @@
       flex: 0 0 auto;
       width: 158px;
       margin-left: -2px;
+      z-index: 1;
 
       .account__avatar {
         background: darken($ui-base-color, 8%);
@@ -927,10 +928,9 @@
 
   &__tabs {
     display: flex;
-    align-items: flex-end;
     justify-content: space-between;
     padding: 7px 10px;
-    margin-top: -115px;
+    margin-top: -65px;
     overflow: hidden;
     margin-inline-start: -2px; // aligns the pfp with content below
 
@@ -946,9 +946,19 @@
       display: flex;
       align-items: center;
       gap: 8px;
-      padding-top: 55px;
       flex-wrap: wrap;
       justify-content: end;
+      z-index: 1;
+      position: relative;
+      margin-top: -72px;
+      background: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 50.2%) 0%,
+        rgba(25, 27, 34, 0%) 60%
+      );
+      padding: 10px;
+      margin-left: -10px;
+      margin-right: -10px;
 
       .button {
         flex-shrink: 1;
@@ -962,24 +972,25 @@
 
       .icon-button {
         border: 4px solid var(--ui-highlight-color);
-        background-color: var(--ui-body-color);
-        color: var(--ui-highlight-color);
+        background-color: var(--ui-highlight-color);
+        color: var(--ui-highlight-button-text-color);
         border-radius: 100%;
         box-sizing: content-box;
         padding: 4px;
-        transition-property: background-color, border, color;
+        transition: box-shadow 0.2s;
+        box-shadow: 0 0 8px transparent;
 
         &:hover,
         &:focus {
-          color: var(--ui-font-color);
-          background-color: var(--ui-highlight-color);
-          border: 4px solid var(--ui-font-color);
+          box-shadow: 0 0 8px var(--ui-highlight-color);
+          color: var(--ui-highlight-button-text-color);
         }
       }
     }
 
     &__name {
-      padding: 5px 10px;
+      padding: 70px 0 0 15px;
+      flex-grow: 2;
 
       .account-role {
         vertical-align: top;
@@ -1132,13 +1143,6 @@
         font-size: 14px;
         padding: 2px 6px;
         color: var(--ui-font-dimmest-color);
-
-        &:hover,
-        &:active,
-        &:focus {
-          color: var(--ui-body-color) !important;
-          background-color: var(--ui-highlight-color) !important;
-        }
 
         &[disabled] {
           color: var(--ui-font-dimmest-color);
