--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -1042,7 +1042,7 @@
     margin: 0 -5px;
 
     .account__header__content {
-      padding: 20px 15px;
+      padding: 0 15px;
       padding-bottom: 5px;
       color: var(--ui-font-color);
     }
