--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -930,7 +930,7 @@
     display: flex;
     justify-content: space-between;
     padding: 7px 10px;
-    margin-top: -65px;
+    margin-top: -85px;
     overflow: hidden;
     margin-inline-start: -2px; // aligns the pfp with content below
 
@@ -950,46 +950,57 @@
       justify-content: end;
       z-index: 1;
       position: relative;
-      margin-top: -72px;
-      background: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 50.2%) 0%,
-        rgba(25, 27, 34, 0%) 60%
-      );
-      padding: 10px;
+      margin-top: -5px;
+      background: var(--ui-highlight-color);
+      padding: 8px;
       margin-left: -10px;
       margin-right: -10px;
 
       .button {
         flex-shrink: 1;
         white-space: nowrap;
-        padding: 12px 18px;
+        padding: 8px 18px;
+        border: 2px solid;
+        transition:
+          background 0.2s,
+          color 0.2s;
 
         @media screen and (max-width: $no-gap-breakpoint) {
           min-width: 0;
         }
+
+        &:hover,
+        &:focus {
+          color: var(--ui-highlight-color);
+          background: var(--ui-highlight-button-text-color);
+          border-color: var(--ui-highlight-button-text-color);
+        }
       }
 
       .icon-button {
-        border: 4px solid var(--ui-highlight-color);
+        border: 2px solid;
         background-color: var(--ui-highlight-color);
         color: var(--ui-highlight-button-text-color);
         border-radius: 100%;
         box-sizing: content-box;
         padding: 4px;
-        transition: box-shadow 0.2s;
+        transition:
+          color 0.2s,
+          background 0.2s,
+          border-color 0.2s;
         box-shadow: 0 0 8px transparent;
 
         &:hover,
         &:focus {
-          box-shadow: 0 0 8px var(--ui-highlight-color);
-          color: var(--ui-highlight-button-text-color);
+          color: var(--ui-highlight-color);
+          background: var(--ui-highlight-button-text-color);
+          border-color: var(--ui-highlight-button-text-color);
         }
       }
     }
 
     &__name {
-      padding: 70px 0 0 15px;
+      padding: 15px;
       flex-grow: 2;
 
       .account-role {
