--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -920,8 +920,8 @@
       z-index: 1;
 
       .account__avatar {
-        background: darken($ui-base-color, 8%);
-        border: 4px solid lighten($ui-base-color, 4%);
+        background: var(--ui-body-secondary-color);
+        border: 4px solid var(--ui-highlight-color);
       }
     }
   }
