--- a/app/javascript/flavours/aether/styles/components/single_column_aether.scss
+++ b/app/javascript/flavours/aether/styles/components/single_column_aether.scss
@@ -238,6 +238,10 @@
         }
       }
 
+      .list-panel {
+        margin-bottom: 15px;
+      }
+
       .scrollable {
         width: auto;
       }
