--- a/app/javascript/flavours/aether/styles/dashboard.scss
+++ b/app/javascript/flavours/aether/styles/dashboard.scss
@@ -121,3 +121,41 @@
     }
   }
 }
+
+.layout-multiple-columns {
+  .home-scroll .compose-form,
+  .fixed_wrapper {
+    display: none;
+  }
+
+  .column_explore,
+  .scrollable--flex {
+    min-height: 100%;
+  }
+
+  .column-header {
+    margin-bottom: 8px;
+
+    > button {
+      font-size: 1.2rem;
+    }
+
+    .column-header__buttons {
+      > .column-header__button {
+        border-radius: 100%;
+        margin-right: 5px;
+        color: var(--ui-highlight-color);
+        border: 3px solid;
+        background: transparent;
+      }
+
+      > .active {
+        color: var(--ui-font-color);
+      }
+    }
+  }
+
+  .column_explore .account__section-headline {
+    display: none;
+  }
+}
