--- a/app/javascript/flavours/aether/styles/dashboard.scss
+++ b/app/javascript/flavours/aether/styles/dashboard.scss
@@ -123,6 +123,10 @@
 }
 
 .layout-multiple-columns {
+  .account-timeline__right-column {
+    margin-bottom: 8px;
+  }
+
   .account__fields {
     margin-top: 8px;
   }
