--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -215,20 +215,8 @@
   border-radius: var(--ui-border-radius);
   font-size: 0.9rem;
   font-weight: 500;
-  color: $ui-secondary-color;
-  background-color: var(--user-role-background, rgba($ui-secondary-color, 0.1));
-
-  &.moderator {
-    color: $success-green;
-    background-color: rgba($success-green, 0.1);
-    border-color: rgba($success-green, 0.5);
-  }
-
-  &.admin {
-    color: lighten($error-red, 12%);
-    background-color: rgba(lighten($error-red, 12%), 0.1);
-    border-color: rgba(lighten($error-red, 12%), 0.5);
-  }
+  color: var(--ui-highlight-button-text-color);
+  background-color: var(--ui-highlight-color);
 }
 
 .simple_form .not_recommended {
@@ -607,7 +595,7 @@
   }
 
   &.active {
-    border-bottom: 4px solid $ui-highlight-color;
+    border-bottom: 4px solid var(--ui-highlight-color);
   }
 
   &:hover,
@@ -919,14 +907,17 @@
 
     .avatar {
       display: block;
+      overflow: hidden;
       flex: 0 0 auto;
-      width: 158px;
+      width: 150px;
       margin-left: -2px;
       z-index: 1;
+      border: 4px solid var(--ui-highlight-color);
+      border-radius: 10px;
 
       .account__avatar {
         background: var(--ui-body-secondary-color);
-        border: 4px solid var(--ui-highlight-color);
+        border-radius: 0; // TODO consider this for later
       }
     }
   }
@@ -940,11 +931,11 @@
     margin-inline-start: -2px; // aligns the pfp with content below
 
     .account-role {
-      margin: 0 30px;
       padding: 4px 0;
       box-sizing: border-box;
-      min-width: 90px;
+      width: 100%;
       text-align: center;
+      border-radius: 0;
     }
 
     &__buttons {
