Remove old comment

--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -917,7 +917,7 @@
 
       .account__avatar {
         background: var(--ui-body-secondary-color);
-        border-radius: 0; // TODO consider this for later
+        border-radius: 0;
       }
     }
   }
