--- a/app/javascript/flavours/aether/styles/admin.scss
+++ b/app/javascript/flavours/aether/styles/admin.scss
@@ -1407,7 +1407,7 @@ a.sparkline {
 }
 
 .account-card {
-  background: $ui-base-color;
+  background: var(--ui-base-color);
   border-radius: 4px;
 
   &__permalink {
@@ -1426,7 +1426,7 @@ a.sparkline {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      background: darken($ui-base-color, 8%);
+      background: var(--ui-page-background);
     }
   }
 
@@ -1444,9 +1444,9 @@ a.sparkline {
         margin: 0;
         width: 56px;
         height: 56px;
-        background-color: darken($ui-base-color, 8%);
+        background-color: var(--ui-page-background);
         border-radius: 8px;
-        border: 1px solid $ui-base-color;
+        border: 1px solid var(--ui-base-color);
       }
     }
 
@@ -1483,7 +1483,7 @@ a.sparkline {
       position: absolute;
       bottom: 0;
       inset-inline-end: 15px;
-      background: linear-gradient(to left, $ui-base-color, transparent);
+      background: linear-gradient(to left, var(--ui-base-color), transparent);
       pointer-events: none;
     }
 
@@ -1559,11 +1559,11 @@ a.sparkline {
   margin-bottom: 20px;
 
   &__item {
-    background: $ui-base-color;
+    background: var(--ui-base-color);
     position: relative;
     padding: 15px;
     padding-inline-start: 15px * 2 + 40px;
-    border-bottom: 1px solid darken($ui-base-color, 8%);
+    border-bottom: 1px solid var(--ui-page-background);
 
     &:first-child {
       border-top-left-radius: 4px;
@@ -1577,7 +1577,7 @@ a.sparkline {
     }
 
     &:hover {
-      background-color: lighten($ui-base-color, 4%);
+      background-color: var(--ui-base-lighter-color);
     }
 
     &__avatar {
