--- a/app/javascript/flavours/aether/styles/components/misc.scss
+++ b/app/javascript/flavours/aether/styles/components/misc.scss
@@ -1501,7 +1501,7 @@ button.icon-button.active i.fa-retweet {
       color: var(--ui-font-color);
       font-weight: 500;
       font-size: 14px;
-      font-family: mastodon-font-sans-serif, sans-serif;
+      font-family: roboto, sans-serif;
     }
 
     &__action {
