--- a/app/javascript/flavours/aether/styles/components/modal.scss
+++ b/app/javascript/flavours/aether/styles/components/modal.scss
@@ -1157,7 +1157,7 @@
       width: 100%;
       border: 0;
       padding: 10px;
-      font-family: mastodon-font-monospace, monospace;
+      font-family: roboto-monospace, monospace;
       background: $ui-base-color;
       color: var(--ui-font-color);
       font-size: 14px;
