--- a/app/javascript/flavours/aether/styles/index.scss
+++ b/app/javascript/flavours/aether/styles/index.scss
@@ -3,6 +3,7 @@
 @import 'styles/fonts/roboto';
 @import 'styles/fonts/roboto-mono';
 @import 'styles/fonts/flow-block';
+@import 'styles/fonts/opendyslexic';
 
 @import 'reset';
 @import 'basics';
