--- a/app/javascript/flavours/glitch/styles/components/modal.scss
+++ b/app/javascript/flavours/glitch/styles/components/modal.scss
@@ -1134,7 +1134,7 @@
       width: 100%;
       border: 0;
       padding: 10px;
-      font-family: mastodon-font-monospace, monospace;
+      font-family: roboto-monospace, monospace;
       background: $ui-base-color;
       color: $primary-text-color;
       font-size: 14px;
