--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -85,9 +85,9 @@ $media-modal-media-max-height: 80%;
 $no-gap-breakpoint: 890px; /* Originally 1175px */
 $widescreen-breakpoint: 1175px;
 
-$font-sans-serif: 'mastodon-font-sans-serif' !default;
-$font-display: 'mastodon-font-display' !default;
-$font-monospace: 'mastodon-font-monospace' !default;
+$font-sans-serif: 'roboto' !default;
+$font-display: 'roboto-font-display' !default;
+$font-monospace: 'roboto-monospace' !default;
 
 // Avatar border size (8% default, 100% for rounded avatars)
 $ui-avatar-border-size: 8%;
