--- a/app/javascript/styles/fonts/flow-block.scss
+++ b/app/javascript/styles/fonts/flow-block.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: mastodon-flow-block;
+  font-family: flow-block;
   src:
     local('Flow Block'),
     url('~fonts/flow-block/flowblock-regular.ttf') format('truetype');
