--- a/app/javascript/styles/fonts/opendyslexic.scss
+++ b/app/javascript/styles/fonts/opendyslexic.scss
@@ -2,7 +2,7 @@
   font-family: opendyslexic;
   src:
     local('OpenDyslexic Italic'),
-    url('~fonts/opendyslexic/opendyslexic-italic.otf') format('otf');
+    url('~fonts/opendyslexic/opendyslexic-italic.otf') format('opentype');
   font-weight: normal;
   font-display: swap;
   font-style: italic;
@@ -12,7 +12,7 @@
   font-family: opendyslexic;
   src:
     local('OpenDyslexic Bold'),
-    url('~fonts/opendyslexic/opendyslexic-bold.otf') format('otf');
+    url('~fonts/opendyslexic/opendyslexic-bold.otf') format('opentype');
   font-weight: bold;
   font-display: swap;
   font-style: normal;
@@ -22,7 +22,7 @@
   font-family: opendyslexic;
   src:
     local('OpenDyslexic Bold Italic'),
-    url('~fonts/opendyslexic/opendyslexic-bolditalic.otf') format('otf');
+    url('~fonts/opendyslexic/opendyslexic-bolditalic.otf') format('opentype');
   font-weight: bold;
   font-display: swap;
   font-style: italic;
@@ -32,7 +32,7 @@
   font-family: opendyslexic;
   src:
     local('OpenDyslexic'),
-    url('~fonts/opendyslexic/opendyslexic-regular.otf') format('otf');
+    url('~fonts/opendyslexic/opendyslexic-regular.otf') format('opentype');
   font-weight: normal;
   font-display: swap;
   font-style: normal;
