--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -886,7 +886,7 @@
     min-height: 145px;
     max-height: 800px; /* Taller profile images */
     position: relative;
-    background: darken($ui-base-color, 4%);
+    background: var(--ui-body-secondary-color);
 
     img {
       object-fit: cover;
@@ -899,7 +899,7 @@
 
   &__bar {
     position: relative;
-    background: lighten($ui-base-color, 4%);
+    background: var(--ui-body-color);
     padding: 5px;
     @media screen and (min-width: $no-gap-breakpoint) {
       border-radius: 0 0 var(--ui-border-radius) var(--ui-border-radius);
@@ -1061,23 +1061,6 @@
       .columns-area--mobile & {
         padding-inline-start: 20px;
         padding-inline-end: 20px;
-      }
-    }
-
-    .account__header__fields {
-      margin: 0;
-      border-top: 1px solid lighten($ui-base-color, 12%);
-
-      a {
-        color: lighten($ui-highlight-color, 8%);
-      }
-
-      dl:first-child .verified {
-        border-radius: 0 var(--ui-border-radius) 0 0;
-      }
-
-      .verified a {
-        color: $valid-value-color;
       }
     }
 
