--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -62,11 +62,11 @@
   }
 
   .wordmark img {
-    display: inherit;
+    display: inherit !important;
   }
 
   .wordmark_dark img {
-    display: none;
+    display: none !important;
   }
 }
 
