--- a/app/javascript/flavours/aether/styles/components/drawer.scss
+++ b/app/javascript/flavours/aether/styles/components/drawer.scss
@@ -140,19 +140,37 @@
 .search-results__section {
   margin-bottom: 5px;
 
-  h5 {
-    background: darken($ui-base-color, 4%);
+  &:last-child {
+    border-bottom: 0;
+  }
+
+  &__header {
+    background: var(--ui-base-color, 4%);
     border-bottom: 1px solid lighten($ui-base-color, 8%);
     cursor: default;
-    display: flex;
     padding: 15px;
     font-weight: 500;
     font-size: 16px;
     color: var(--ui-font-dimmer-color);
+    display: flex;
+    justify-content: space-between;
 
-    .fa {
-      display: inline-block;
+    h3 .fa {
       margin-inline-end: 5px;
+    }
+
+    button {
+      color: var(--ui-highlight-color);
+      padding: 0;
+      border: 0;
+      background: 0;
+      font: inherit;
+
+      &:hover,
+      &:active,
+      &:focus {
+        text-decoration: underline;
+      }
     }
   }
 
