--- a/app/javascript/flavours/aether/styles/components/search.scss
+++ b/app/javascript/flavours/aether/styles/components/search.scss
@@ -78,6 +78,11 @@
           font-weight: 700;
           color: var(--ui-font-color);
         }
+
+        span {
+          overflow: inherit;
+          text-overflow: inherit;
+        }
       }
     }
   }
